SMP Courses work
Signed-off-by: Nirmal Khedkar <nirmalhk7@gmail.com>

--- a/sig/Torsion.html
+++ b/sig/Torsion.html
@@ -9,7 +9,7 @@ title: Torsion
       <div class="block-heading">
         <img src={{ "/assets/img/Torsion-logo.png" | relative_url }} class="sig-logo">
         <h2 class="text-info">Torsion Projects</h2>
-        <p>Shifting the Gears of Technology.</p>
+        <p>Shifting the Gears of Engineering.</p>
       </div>
       <div class="block-content">
         {% for project in site.data.projects.Torsion %}
